# deephaven-core

./: .gitignore  CMakeLists.txt  README.md  build.gradle  classpaths.gradle  default_scala.env  docker-compose-common.yml  docker-compose.yml  settings.gradle
.github/workflows/: nightly-check-ci.yml
DB/: DB.gradle
DB/src/main/java/io/deephaven/db/appmode/: Application.java  ApplicationClass.java  ApplicationConfig.java  ApplicationConfigImpl.java  ApplicationExec.java  ApplicationGroovyScript.java  ApplicationPythonScript.java  ApplicationQST.java  Field.java  Fields.java  Output.java  OutputTable.java  (+1 more)
DB/src/test/app.d/: 01-groovy.app  02-python.app  03-qst.app
DB/src/test/java/io/deephaven/appmode/: ApplicationConfigTest.java  ApplicationConfigs.java  ApplicationTest.java
ModelFarm/src/main/java/io/deephaven/modelfarm/: ModelFarmBase.java
Parquet/src/main/java/io/deephaven/parquet/: ColumnChunkReaderImpl.java
Util/: Util.gradle
Util/src/main/java/io/deephaven/util/: ByteUtils.java
application-mode/: build.gradle
application-mode/src/main/java/io/deephaven/appmode/: ApplicationState.java  CustomField.java
authentication/src/main/java/io/deephaven/auth/: AuthContext.java
authorization/: README.md  build.gradle
authorization/src/main/java/io/deephaven/auth/: ServiceAuthWiring.java
buildSrc/src/main/groovy/: Classpaths.groovy
configs/: dh-defaults.prop
docker/runtime-base/src/main/docker/: Dockerfile
docker/server-jetty/src/main/server-jetty/: requirements.txt
docker/server/src/main/docker/: Dockerfile
engine/rowset/: build.gradle
engine/updategraph/: build.gradle
extensions/deephaven-scala/: build.gradle
go/: build.gradle
go/internal/proto/table/: table.pb.go  table_grpc.pb.go
go/pkg/client/: query_test.go
grpc-api/: grpc-api.gradle
grpc-api-client/: build.gradle
grpc-api-client/src/main/java/com/google/protobuf/: ByteStringAccess.java
grpc-api/server/docker/: build.gradle
grpc-api/server/docker/src/main/resources/: logback.xml
grpc-api/src/main/java/io/deephaven/appmode/: Application.java  ApplicationClass.java  ApplicationConfig.java  ApplicationConfigImpl.java  ApplicationContext.java  ApplicationExec.java  ApplicationFactory.java  ApplicationGroovyScript.java  ApplicationInjector.java  ApplicationPythonScript.java  ApplicationQST.java  Output.java  OutputTable.java  OutputTableMap.java  ScriptApplicationState.java
grpc-api/src/test/app.d/: 00-class.app  00-static.app  01-groovy-b.groovy  01-groovy.app  01-groovy.groovy  02-python.app  03-qst.app  04-advanced.app  04-dynamic.app
props/configs/src/main/resources/: dh-defaults.prop
proto/proto-backplane-grpc/: Dockerfile
proto/proto-backplane-grpc/src/main/proto/deephaven/proto/: application.proto  console.proto  field.proto  table.proto
proto/raw-js-openapi/src/: index.js
protos/: barrage.proto  console.proto  session.proto  table.proto
py/client/: build.gradle
py/client/pydeephaven/proto/: table_pb2.py  table_pb2_grpc.py
py/client/tests/: test_plugin_client.py
py/server/deephaven/: arrow.py  table.py  ugp.py
py/server/tests/: test_arrow.py  test_pt_proxy.py  test_table.py
py/server/tests/data/: crypto_trades.parquet  day_trades.parquet
qst/src/main/java/io/deephaven/qst/: TableAdapterImpl.java
replication/static/: build.gradle
server/: build.gradle
server/jetty-app/src/main/resources/: logback.xml
server/netty-app/: build.gradle
server/netty-app/src/main/resources/: logback.xml
src/: example.cc
table-api/src/main/java/io/deephaven/api/: RawString.java  TableOperations.java  TableOperationsAdapter.java
web/client-ide/nginx/: default.conf
(+615 files in other folders)
